# crithit

./: Dockerfile  README.md  crithit.sln
crithit/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  crithit  crithit.cpp  crithit.vcxproj  crithit.vcxproj.filters  https_socket.cpp  https_socket.hpp  request.cpp  request.hpp  utils.cpp  utils.hpp
dep/: libraries.tar
